--- a/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Procedure for Mañjuśrī's Single-Syllable Mantra</title>
+                <title type="mainTitle" xml:lang="en">The Procedure for Mañjuśrī’s Single-Syllable Mantra</title>
                 <title type="mainTitle" xml:lang="bo">འཇམ་དཔལ་གྱི་སྔགས་ཡི་གེ་འབྲུ་གཅིག་པའི་ཆོ་ག།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">’jam dpal gyi yi ge ’bru gcig pa’i gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble Procedure for Mañjuśrī’s Single-Syllable Mantra</title>
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -56,14 +56,14 @@
                     <ref>Toh 896</ref>
                     <biblScope>Degé Kangyur vol. 100 (gzungs, e), folios 168.a.2–168.a.6</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="333" end-page="334"/>
+                        <volume number="101" start-page="333" end-page="333"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12658" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T08:21:19.899Z" user="admin">17/04/2023 08:21:19</note>
+                <note type="lastUpdated" date-time="2023-06-19T14:57:20.105Z" user="admin">19/06/2023 14:57:20</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto
@@ -107,6 +107,7 @@
                 <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:15:45.486Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
                 <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:21:15.594Z" user="sameer">1</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:21:15.594Z" user="sameer">Included in App v 3.1</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-19T14:57:17.277Z" user="john">In title, corrected a "straight" apostrophe to a “typography” one.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
