--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -26,7 +26,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-26T23:15:34.353Z" user="admin">26/04/2023 23:15:34</note>
+                                <note type="lastUpdated" date-time="2023-06-19T16:20:41.299Z" user="admin">19/06/2023 16:20:41</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -128,6 +128,7 @@
                             <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:02:17.066Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T08:02:17.066Z" user="sameer">Included in App v 3.1</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-26T23:15:31.526Z" user="martina-cotter">updated summary and note 15.</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2023-06-19T16:20:38.464Z" user="john">Added one note (17).</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -240,10 +241,16 @@
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-089-002-32"/>
                                         <p tid="24">As for the benefits of this dhāraṇī, even a single recitation will purify the karmic obscurations
-                                                accrued over a thousand eons, <ref key="toh892" cRef="F.167.a" type="folio" xml:id="UT22084-089-002-77"/> and at the time of death one will behold noble Mañjuśrī.<note place="end" xml:id="UT22084-089-002-33"> According to the Comparative Edition, the Lhasa
+                                                accrued over a thousand eons, <ref key="toh892" cRef="F.167.a" type="folio" xml:id="UT22084-089-002-77"/> 
+                                                and at the time of death one will behold noble Mañjuśrī.<note place="end" xml:id="UT22084-089-002-33"> According 
+                                                        to the Comparative Edition, the Lhasa
                                                         Kangyur edition here reads <foreign xml:lang="Bo-Ltn" type="quote">’jam dpal gyi zhal
                                                                 mthong</foreign> (“behold the face of Mañjuśrī”).</note> One will also behold the body
-                                                of noble Avalokiteśvara, his head crowned with a topknot. In short, the benefits of this dhāraṇī are
+                                                of noble Avalokiteśvara, his head adorned with a topknot.<note place="end" xml:id="UT22084-089-002-90">The 
+                                                        Tibetan <foreign xml:lang="Bo-Ltn">thor tshugs kyis dbu brgyan pa</foreign> could also be interpreted 
+                                                        as referring to the five bunches of bound hair tresses that feature in some descriptions of 
+                                                        Mañjuśrī (giving his epithets Pañcaśikha and Pañcacīraka), rather than to a single topknot. </note> 
+                                                In short, the benefits of this dhāraṇī are
                                                 limitless.</p>
                                         <milestone unit="chunk" xml:id="UT22084-089-002-34"/>
                                         <trailer tid="25">This concludes the noble dhāraṇī “<title xml:lang="en">Spoken by Mañjuśrī
