--- a/translations/kangyur/translations/068-002_toh268-the_sutra_of_king_of_the_inconceivable.xml
+++ b/translations/kangyur/translations/068-002_toh268-the_sutra_of_king_of_the_inconceivable.xml
@@ -47,12 +47,12 @@
 
 
                         <editionStmt>
-                <edition>v 1.0.7 <date>2022</date>
+                <edition>v 1.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
 
 
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -169,7 +169,7 @@
                                 <note type="updated" update="text-version" value="1.0.3" date-time="2022-05-11T20:09:16.672Z" user="martina-cotter">Added pending links.</note>
 
                                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-05-12T13:00:30.694Z" user="martina-cotter">Added pending links.</note>
-                        <note type="lastUpdated" date-time="2023-01-20T19:53:07.229Z" user="celso">20/01/2023 19:53:07</note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-29T16:15:00.434Z" user="cabie-sim">Auto (update-titles)</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                        <note type="lastUpdated" date-time="2023-06-20T06:48:08.057Z" user="admin">20/06/2023 06:48:08</note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-29T16:15:00.434Z" user="cabie-sim">Auto (update-titles)</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="translation-status" value="1" date-time="2023-06-20T06:48:03.767Z" user="sameer">1</note>    <note type="updated" update="text-version" value="1.0.8" date-time="2023-06-20T06:48:03.767Z" user="sameer">Included in App v 2.0</note>
             </notesStmt>
                 </fileDesc>
         </teiHeader>
