--- a/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
+++ b/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
@@ -28,13 +28,13 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
 
 
 
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -74,7 +74,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-18T17:09:26.645Z" user="celso">18/01/2023 17:09:26</note>
+                                <note type="lastUpdated" date-time="2023-06-20T06:54:10.493Z" user="admin">20/06/2023 06:54:10</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-02T14:34:15.282Z" user="line-tofte">3</note>
@@ -130,6 +130,8 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-29T16:13:49.089Z" user="cabie-sim">Auto (update-titles)</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-06-20T06:54:06.227Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2023-06-20T06:54:06.227Z" user="sameer">Included in App v 2.0</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -661,31 +663,12 @@
                                 <list type="glossary">
 
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-012-75">
-                                                  <term>blessed one</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">bcom
-                                                  ldan ’das </term>
-                                                  <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bhagavān</term>
-                                                  <term type="definition">In Buddhist literature, an
-                                                  epithet applied to buddhas, most often to
-                                                  Śākyamuni. The Sanskrit term generally means
-                                                  “possessing fortune,” but in specifically Buddhist
-                                                  contexts it implies that a buddha is in possession
-                                                  of six auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
-                                                  associated with complete awakening. The Tibetan
-                                                  term‍—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the
-                                                  four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the great
-                                                  qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to
-                                                  “going beyond” saṃsāra and nirvāṇa‍—possibly
-                                                  reflects the commentarial tradition where the
-                                                  Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, additionally,
-                                                  as “one who destroys the four māras.” This is
-                                                  achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”),
-                                                  or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root √<foreign xml:lang="Sa-Ltn" type="term">bhañj</foreign> (“to
-                                                  break”).</term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-75" type="term" mode="match">
+                            <term>blessed one</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavān</term>
+                        </gloss>
                     </item>
                                         <item>
                                                 <gloss xml:id="UT22084-068-012-76" type="term" mode="match">
@@ -786,18 +769,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-012-82">
-                                                  <term>asura</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">lha ma
-                                                  yin </term>
-                                                  <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">asura</term>
-                                                  <term type="definition">Traditional adversaries of
-                                                  the gods who are frequently portrayed in
-                                                  brahmanical mythology as having a disruptive
-                                                  effect on cosmological and social harmony. </term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-82" type="term" mode="match">
+                            <term>asura</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">lha ma yin</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ་མ་ཡིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">asura</term>
+                            <!--<term type="definition">Traditional adversaries of the gods who are frequently portrayed in brahmanical mythology as having a disruptive effect on cosmological and social harmony. </term>-->
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-068-012-83">
