--- a/translations/kangyur/translations/072-028_toh328-the_sutra_of_nandas_going_forth.xml
+++ b/translations/kangyur/translations/072-028_toh328-the_sutra_of_nandas_going_forth.xml
@@ -25,10 +25,10 @@
                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.11 <date>2022</date>
+                <edition>v 1.0.12 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T16:58:45.158Z" user="celso">18/01/2023 16:58:45</note>
+                <note type="lastUpdated" date-time="2023-06-20T06:56:47.156Z" user="admin">20/06/2023 06:56:47</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-06-21T07:15:46.31Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T07:22:55.327Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-11-25T08:54:38.067Z" user="andreas">2.e</note>
@@ -125,6 +125,8 @@
                 <note type="updated" update="text-version" value="1.0.9" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.10" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.11" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2023-06-20T06:56:42.871Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.12" date-time="2023-06-20T06:56:42.871Z" user="sameer">Included in App.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -852,25 +854,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-072-028-96">
+                        <gloss xml:id="UT22084-072-028-96" type="term" mode="match">
                             <term>Blessed One</term>
-                            <term xml:lang="Bo-Ltn" status="verified">bcom ldan ’das</term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                            <term xml:lang="Sa-Ltn" status="verified">bhagavat</term>
-                            <term type="definition">In Buddhist literature, an epithet applied to
-                                buddhas, most often to Śākyamuni. The Sanskrit term generally means
-                                “possessing fortune,” but in specifically Buddhist contexts it
-                                implies that a buddha is in possession of six auspicious qualities
-                                (Skt. <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
-                                associated with complete awakening. The Tibetan term—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to
-                                “subduing” the four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the great qualities of
-                                Buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to “going beyond” saṃsāra and nirvāṇa—possibly
-                                reflects the commentarial tradition where the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted
-                                as “one who destroys the four māras.” This is achieved either by
-                                reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as
-                                    <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one
-                                who broke”), or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj </foreign>(“to
-                                break”).</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavat</term>
                         </gloss>
                     </item>
                     <item>
