--- a/translations/kangyur/placeholders/063-011_toh230-the_sutra_on_the_splendid_commitments_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/063-011_toh230-the_sutra_on_the_splendid_commitments_of_the_tathagatas.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'dus pa chen po theg pa chen po'i mdo sde las de bzhin gshegs pa'i dpal gyi dam tshig ces bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāsaṃnipātād mahāyānasūtrāt tathāgataśrīsamaya­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-063-011"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh230" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:47 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-20T13:46:55.111Z" user="admin">20/06/2023 13:46:55</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-20T13:46:50.832Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
