--- a/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -4,40 +4,34 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">so sor ’brang ba chen
-                                        mo</title>
-                                <title type="mainTitle" xml:lang="bo">སོ་སོར་སྦྲང་བ་ཆེན་མོ།</title>
                                 <title type="mainTitle" xml:lang="en">The Great Amulet</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Mahāpratisarā</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་རིག་པའི་རྒྱལ་མོ་སོ་སོར་སྦྲང་བ་ཆེན་མོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rig pa’i rgyal
-                                        mo so sor ’brang ba chen mo</title>
+                                <title type="mainTitle" xml:lang="bo">སོ་སོར་སྦྲང་བ་ཆེན་མོ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">so sor ’brang ba chen
+                                        mo</title>
                                 <title type="longTitle" xml:lang="en">The Noble Queen of
                                         Incantations: The Great Amulet</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­mahāprati­sarāvidyā­rājñī</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་རིག་པའི་རྒྱལ་མོ་སོ་སོར་སྦྲང་བ་ཆེན་མོ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rig pa’i rgyal
+                                        mo so sor ’brang ba chen mo</title>
                                 <title type="otherTitle" xml:lang="zh">《明咒妃大隨求母》（大正藏：《普遍光明清淨熾盛如意寶印心無能勝大明王大隨求陀羅尼經》）</title>
-                                <author ref="eft:team-9" role="translatorMain">Translated by The
+                                <author role="translatorMain" ref="eft:team-9">Translated by The
                                         Dharmachakra Translation Committee<lb/>under the patronage
                                         and supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <editor role="associateEditor" ref="eft:person-141">Charles
-                                        Hastings</editor>
-                                <consultant role="projectManager" ref="eft:person-50">Andreas
-                                        Doctor</consultant>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
-                                <author role="translatorEng" ref="eft:person-51">James
-                                        Gentry</author>
+                                <editor role="associateEditor" ref="eft:person-141">Charles Hastings</editor>
+                                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <author role="translatorEng" ref="eft:person-51">James Gentry</author>
                                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
-                                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima
-                                        Rinpoche</consultant>
+                                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
                                 <editor role="copyEditor" ref="eft:person-273">Janna White</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -82,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-18T21:28:42.025Z" user="admin">18/05/2023 21:28:42</note>
+                                <note type="lastUpdated" date-time="2023-06-27T16:10:06.213Z" user="admin">27/06/2023 16:10:06</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:41.721Z" user="mike">2.d</note>
@@ -106,9 +100,11 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-02T08:54:48.55Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="1.a" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">1.a</note>
-                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">First published version</note>
-                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-18T21:28:39.143Z" user="martina-cotter">updated sponsorship.</note>
+                                <note type="updated" update="translation-status" value="1.a" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">1.a</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-18T21:28:39.143Z" user="martina-cotter">updated sponsorship.</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-30T06:55:56.231Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-27T16:10:03.353Z" user="andre">Glossary matched revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -168,8 +164,8 @@
                                                   Amulet</title>, the other four texts are <title xml:lang="en">Destroyer of the Great
                                                   Trichiliocosm</title> (<title xml:lang="Sa-Ltn">Mahā­sāhasrapramardanī­sūtra</title>, Toh
                                                   558),<note place="end" xml:id="UT22084-090-005-7">
-                                                  Dharmacakra Translation Committee, trans., <title xml:lang="en">
-                                <ref target="https://read.84000-translate.org/translation/toh558.html">Destroyer of the Great
+                                                          Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh558.html">Destroyer of the Great
                                                   Trichiliocosm</ref>
                             </title>, Toh 558 (84000:
                                                   Translating the Words of the Buddha, 2016).</note>
@@ -178,8 +174,8 @@
                                                 <title xml:lang="en">The Sūtra of the Great Cool
                                                   Grove</title> (<title xml:lang="Sa-Ltn">Mahā­śītavatī­sūtra</title>, Toh 562),<ref rend="pending" target="http://read.84000.co/translation/toh562.html"/> and <title xml:lang="en">Great Upholder of the
                                                   Secret Mantra</title> (<title xml:lang="Sa-Ltn">Mahā­mantrānusāriṇī­sūtra</title>, Toh 563).<note place="end" xml:id="UT22084-090-005-8">
-                                                  Dharmacakra Translation Committee, trans., <title xml:lang="en">
-                                <ref target="https://read.84000-translate.org/translation/toh563.html">Great Upholder of the Secret
+                                                          Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh563.html">Great Upholder of the Secret
                                                   Mantra</ref>
                             </title>, Toh 563 (84000: Translating
                                                   the Words of the Buddha, 2016). </note> Together
@@ -3185,7 +3181,7 @@
                                                   perhaps meant to indicate which oblation rite is
                                                   to be performed. See Dharmacakra Translation
                                                   Committee, trans., <title xml:lang="en">
-                                    <ref target="https://read.84000-translate.org/translation/toh558.html">Destroyer of the Great
+                                    <ref target="http://read.84000.co/translation/toh558.html">Destroyer of the Great
                                                   Trichiliocosm</ref>
                                 </title>, Toh 558 (84000:
                                                   Translating the Words of the Buddha,
@@ -3468,7 +3464,7 @@
                                                 89–123.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-090-005-701">
